--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>ToolBox</title>
         <link rel="stylesheet" href="./style.css">
+    </head>
+    <body>
         <div style="display: flex;">
             <div class="column-container"> 
                 <p id="warning">Оберіть дію</p>
                 <input type="text" placeholder="Текст" id="str" class="hidden-element">
                 <input type="number" placeholder="Кількість повторень" id="num" class="hidden-element">
                 <input type="number" placeholder="Початок відліку" id="startFrom" class="hidden-element">
-                <input type="number" placeholder="Кінкць відліку" id="end" class="hidden-element">
+                <input type="number" placeholder="Кінець відліку" id="end" class="hidden-element">
                 <input type="number" placeholder="Довжина пароля" id="numOfLength" class="hidden-element">
+                <input type="number" placeholder="Кількість кроків" id="staps">
+                <input type="number" placeholder="Початок А" id="startA">
+                <input type="number" placeholder="Початок Б" id="startB">
                 <!-- <select>
                     <option value="">Оберіть</option>
                 </select> -->
@@ -21,12 +29,13 @@
                     <option value="countStr">Порахувати довжину рядка</option>
                     <option value="count">Порахувати</option>
                     <option value="genPass">Згенерувати пароль</option>
+                    <option value="fib">Функція фібоначчі</option>
                 </select>
                 <select id="spcSelect" class="hidden-element">
                     <option value="whith">З пробілами</option>
                     <option value="whithOut">Без пробілів</option>
                     <option value="whithComa">Через кому</option>
-                    <option>Без пробілів та через кому(формат масива)</option>
+                    <option value="arrayFormat">Без пробілів та через кому(формат масива)</option>
                 </select>
                 <button id="doIt">Виконати</button>
             </div>
