--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
                 <input type="number" placeholder="Кінець відліку" id="end" class="hidden-element">
                 <input type="number" placeholder="Довжина пароля" id="numOfLength" class="hidden-element">
                 <input type="number" placeholder="Кількість кроків" id="staps">
-                <input type="number" placeholder="Початок А" id="startA">
-                <input type="number" placeholder="Початок Б" id="startB">
+                <input type="number" placeholder="Початок А(опціонально)" id="startA">
+                <input type="number" placeholder="Початок Б(опціонально)" id="startB">
+                <label id="checkbox">
+                <input type="checkbox" name="Ітерації" id="ite">
+                Ітерації</label>
                 <!-- <select>
                     <option value="">Оберіть</option>
                 </select> -->
