--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#333333">
         <title>ToolBox</title>
         <link rel="stylesheet" href="./style.css">
     </head>
@@ -15,10 +16,10 @@
                 <input type="number" placeholder="Початок відліку" id="startFrom" class="hidden-element">
                 <input type="number" placeholder="Кінець відліку" id="end" class="hidden-element">
                 <input type="number" placeholder="Довжина пароля" id="numOfLength" class="hidden-element">
-                <input type="number" placeholder="Кількість кроків" id="staps">
-                <input type="number" placeholder="Початок А(опціонально)" id="startA">
-                <input type="number" placeholder="Початок Б(опціонально)" id="startB">
-                <label id="checkbox">
+                <input type="number" placeholder="Кількість кроків" id="staps" class="hidden-element">
+                <input type="number" placeholder="Початок А(опціонально)" id="startA" class="hidden-element">
+                <input type="number" placeholder="Початок Б(опціонально)" id="startB" class="hidden-element">
+                <label id="checkbox" class="hidden-element">
                 <input type="checkbox" name="Ітерації" id="ite">
                 Ітерації</label>
                 <!-- <select>
